--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
            </div>
 
          
-          <!--9-->
+          <!--9 -->
           <div class="group relative block overflow-hidden">
              <a
                href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20undangan%20fotocopy"
@@ -488,8 +488,8 @@
         Produk Lainnya
       </p>
     </div>
-
 <div class="container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mx-auto py-8 px-4">
+	
      <!-- 1 -->
     <div class="group relative block overflow-hidden">
       <img
@@ -579,7 +579,7 @@
                       </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20tip-x,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -683,7 +683,7 @@
                       </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20Double Tape Kertas Busa,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -788,8 +788,7 @@
                       </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
-                      target="_blank"
+                       href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20stopmap%20ukuran%20F4,%20Apakah%20masih%20ada?"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
                       TANYA KETERSEDIAAN
@@ -895,7 +894,7 @@
                       </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20krayon%20oil%20pastel,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -1001,7 +1000,7 @@
                       </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20pensil%20warna,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -1107,7 +1106,7 @@
                       </ul>                      
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20nota%20kontan,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -1211,7 +1210,7 @@
                           </ul>
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20buku%20kwitansi,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
@@ -1317,7 +1316,7 @@
                       </ul>                      
                     </p>
                     <a
-                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20tertarik%20dengan%20produk%20Cetak%20kartu%20nama"
+                      href="https://wa.me/6282135752245?text=Halo%2C%20saya%20ingin%20membeli%20produk%20sipidol%20Warna-warni,%20Apakah%20masih%20ada?"
                       target="_blank"
                       class="block w-full rounded-sm bg-indigo-600 p-4 mt-4 text-sm font-medium text-white text-center uppercase transition hover:scale-105"
                     >
