--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               class="inline-block rounded border border-gray-200 px-5 py-3 font-medium text-gray-700 shadow-sm transition-colors hover:bg-gray-50 hover:text-gray-900"
               href="#produk"
             >
-              Produk Lainnya
+              Produk ATK
             </a>
           </div>
         </div>
