--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
         </div>
       </div>
       <div class="mt-10 md:mt-0 flex justify-center">
-        <img src="https://sdmntprwestus3.oaiusercontent.com/files/00000000-afd4-61fd-96b0-5dd089cf4eb1/raw?se=2025-07-29T06%3A19%3A22Z&sp=r&sv=2024-08-04&sr=b&scid=d0733d20-88b0-53f7-b549-8c65c752205d&skoid=9ccea605-1409-4478-82eb-9c83b25dc1b0&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-07-28T19%3A07%3A52Z&ske=2025-07-29T19%3A07%3A52Z&sks=b&skv=2024-08-04&sig=gvYkwq%2BI93o76Ib93Z2L8g%2BTFP96KGiW%2B7AUe/OkVzk%3D"
-             alt="Ilustrasi orang di depan komputer" 
+        <img src="https://plus.unsplash.com/premium_vector-1742013359394-04d12e9aa8ec?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+		alt="Ilustrasi orang di depan komputer" 
              class="w-full h-80 max-w-md h-auto border-none shadow-none bg-transparent rounded-none">
       </div>      
       </div>
@@ -1523,3 +1523,4 @@
     <!--footer-->
   </body>
 </html>
+
